# YoloDeteccionMonedas

./: .gitignore  CLAUDE.md  README.md  contexto.md  pyproject.toml
.claude/: settings.json
app/: CLAUDE.md  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  vite.config.ts
app/android/: gradle.properties
app/android/app/: build.gradle
app/src/: App.tsx  main.tsx
app/src/hooks/: useCamera.ts  useDetection.ts
app/src/lib/: yolo.ts
app/src/theme/: global.css  variables.css
app/src/types/: coins.ts
dataset_v2/: README.dataset.txt  README.roboflow.txt  data.yaml  data_train.yaml
dataset_v2/test/: labels.cache
dataset_v2/test/labels/: IMG_4353_HEIC.rf.8cbea39426079f164883f668db89b4dd.txt  IMG_4362_HEIC.rf.de4a363f42017faa411e316accb7f945.txt  IMG_4364_HEIC.rf.2ff20e3c7d5565e91b6e3c041d85a522.txt  IMG_4376_HEIC.rf.0adba1dc7bb4e5b8d65f3522764395ef.txt
dataset_v2/train/: labels.cache
dataset_v2/train/labels/: IMG_4351_HEIC.rf.675c3ca665df4a4d30d4beb50f243a24.txt  (+29 more)
dataset_v2/valid/: labels.cache
notebooks/v1/: 01_eda.ipynb  02_dataset_prep.ipynb  03_train.ipynb  04_export.ipynb
notebooks/v2/: 02_dataset_prep.ipynb  03_train.ipynb  04_export.ipynb
reports/v1/: annotations.csv  boxes_per_image_summary.csv  class_distribution.csv  image_color_stats.csv  inventory.csv  metrics_per_class_valid.csv  metrics_summary.csv  split_summary.csv
reports/v2/: annotations.csv  boxes_per_image_summary.csv  class_distribution.csv  image_stats.csv  inventory.csv  metrics_per_class_valid.csv  metrics_summary.csv
(+16 files in other folders)
