[project]
name = "sistema-recomendacion-monedas"
version = "0.1.0"
description = "Detección y conteo en tiempo real de monedas colombianas con YOLO"
requires-python = ">=3.12,<3.13"
dependencies = [
  "ultralytics>=8.3.0",
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pillow>=10.0",
  "opencv-python>=4.9",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "onnx>=1.16",
  "onnxruntime>=1.18"
]

[tool.uv]
package = false
